<resources>
    <string name="app_name">Tic Tac Toe</string>

    <string name="onePlayer">1 Player</string>
    <string name="twoPlayer">2 Player</string>
    <string name="easy_difficult">Facil</string>
    <string name="normal_difficult">Normal</string>
    <string name="hard_difficult">Dificil</string>
    <string name="Tile">Casilla</string>
    <string name="circle_win">Circulos ganan!</string>
    <string name="crosses_win">Aspas ganan!</string>
    <string name="tie">Empate!</string>
    <string name="configure">Configurar</string>
    <string name="restart">Volver a jugar!</string>
</resources>
